[gd_scene load_steps=12 format=3 uid="uid://mo4be646d1ah"]

[ext_resource type="Script" path="res://Scenes/Menu/audio_menu.gd" id="1_116gs"]
[ext_resource type="FontFile" uid="uid://dndckiai2p8e8" path="res://Assets/Fonts/kirifont/KiriFont.otf" id="1_kkylh"]
[ext_resource type="Texture2D" uid="uid://d2jj1ahnwt2xa" path="res://Assets/GUI/white_musicOn_Inverted.png" id="3_gmqsn"]
[ext_resource type="Texture2D" uid="uid://bs3rnrxqbog5b" path="res://Assets/GUI/barBlue_horizontalBlue.png" id="5_5qxqi"]
[ext_resource type="Texture2D" uid="uid://dkx8e0eb3viqx" path="res://Assets/GUI/white_musicOn_grey.png" id="5_ysgbm"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8x7ww"]
texture = ExtResource("5_5qxqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_fjawm"]
texture = ExtResource("5_5qxqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_6snj4"]
texture = ExtResource("5_5qxqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h0j28"]
texture = ExtResource("5_5qxqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_u6rh3"]
texture = ExtResource("5_5qxqi")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ufnvt"]
texture = ExtResource("5_5qxqi")

[node name="AudioMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_116gs")

[node name="AudioTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.054
anchor_top = 0.116
anchor_right = 0.337
anchor_bottom = 0.168
offset_left = -0.592003
offset_top = 56.368
offset_right = -0.176025
offset_bottom = 56.464
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kkylh")
theme_override_font_sizes/font_size = 60
text = "Audio Options"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.031
anchor_top = 0.269
anchor_right = 0.363
anchor_bottom = 0.814
offset_left = 0.511997
offset_top = 0.111969
offset_right = 0.575989
offset_bottom = 0.271973
grow_horizontal = 2
grow_vertical = 2

[node name="MasterLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kkylh")
theme_override_font_sizes/font_size = 40
text = "Master Volume"

[node name="MasterAudioSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("3_gmqsn")
theme_override_icons/grabber_highlight = ExtResource("5_ysgbm")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_8x7ww")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_fjawm")
min_value = -80.0
max_value = 0.0

[node name="MusicLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kkylh")
theme_override_font_sizes/font_size = 40
text = "Music Volume"

[node name="MusicAudioSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("3_gmqsn")
theme_override_icons/grabber_highlight = ExtResource("5_ysgbm")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_6snj4")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_h0j28")
min_value = -80.0
max_value = 0.0

[node name="SFXLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 6
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kkylh")
theme_override_font_sizes/font_size = 40
text = "SFX Volume"

[node name="SFXAudioSlider" type="HSlider" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 2
theme_override_icons/grabber = ExtResource("3_gmqsn")
theme_override_icons/grabber_highlight = ExtResource("5_ysgbm")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_u6rh3")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_ufnvt")
min_value = -80.0
max_value = 0.0

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_pressed_color = Color(0.968627, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_kkylh")
theme_override_font_sizes/font_size = 60
text = "Exit"
flat = true

[connection signal="value_changed" from="VBoxContainer/MasterAudioSlider" to="." method="_on_master_audio_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/MusicAudioSlider" to="." method="_on_music_audio_slider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/SFXAudioSlider" to="." method="_on_sfx_audio_slider_value_changed"]
[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_button_pressed"]
